--- a/main.tex
+++ b/main.tex
@@ -126,6 +126,7 @@
 %%  * nojkufooter    ... Do not insert JKU/partner logos into the frame footer.
 %%  * nofooter       ... Do not display a frame footer.
 %%  * noimprint      ... Do not insert imprint on title pages.
+%%  * nojkulogo      ... Do not insert JKU & K logos on title pages and in frame footers.
 %%  * frametitlecaps ... Set frame titles in capital letters (like in eariler theme versions).
 %%  * nofancyfonts   ... Do not use custom TTF fonts with XeTeX / supress pdfLaTeX warning.
 %%  * mac            ... Use adapted color palette for screen display on Mac.
