--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -381,6 +381,17 @@
         \edef\Gin@extensions{\detokenize\expandafter{\Gin@extensions}}%
     \fi%
     \let\input@path\Ginput@path%
+    \@ifundefined{set@curr@file}{%
+        \def\set@curr@file#1{%
+            \begingroup
+                \escapechar\m@ne
+                \xdef\@curr@file{\expandafter\string\csname #1\endcsname}%
+            \endgroup
+        }%
+    }{}%
+    \@ifundefined{quote@name}{\def\quote@name#1{"\quote@@name#1\@gobble""}}{}%
+    \@ifundefined{quote@name}{\def\quote@@name#1"{#1\quote@@name}}{}%
+    \@ifundefined{quote@name}{\def\unquote@name#1{\quote@@name#1\@gobble"}}{}%
     \set@curr@file{#1}%
     \expandafter\filename@parse\expandafter{\@curr@file}%
     \ifx\filename@ext\Gin@gzext%
