Fix potentially mis-packaged fontawesome5 in TeX Live 2017, see https://tex.stackexchange.com/q/497792/290236

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -83,6 +83,10 @@
 \RequirePackage{helvet}
 \RequirePackage{euler}
 \RequirePackage{fontawesome5}
+\ifxetex\else%
+    % fix potentially mis-packaged FA5 in TeX Live 2017, see https://tex.stackexchange.com/q/497792/290236
+    \pdfmapfile{=fontawesome5.map}%
+\fi
 %\usefonttheme{serif}
 \usefonttheme{professionalfonts}
 
