--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -15,7 +15,7 @@
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 
-\ProvidesPackage{beamerthemejku}
+\ProvidesPackage{beamerthemejku}[2023/07/11 v3.0 JKU Linz Beamer Theme]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
