--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -15,7 +15,7 @@
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 
-\ProvidesPackage{beamercolorthemejku}
+\ProvidesPackage{beamercolorthemejku}[2023/07/11 v3.0 JKU Linz Beamer Theme (color theme)]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
