--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -15,7 +15,7 @@
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 
-\ProvidesPackage{beamerfontthemejku}
+\ProvidesPackage{beamerfontthemejku}[2023/07/11 v3.0 JKU Linz Beamer Theme (font theme)]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
