--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -44,7 +44,7 @@
 %% 
 
 % Option logopath={}: set path to template logo resources (defaults to "./logos")
-\newcommand{\jkubeamer@logopath}{./logos}
+\newcommand{\jkubeamer@logopath}{logos}
 \DeclareOptionBeamer{logopath}{\renewcommand{\jkubeamer@logopath}{#1}}
 
 % Option [no]frametitlecaps: set frame titles in all-caps (defaults to false)
