fix command name in documentation

--- a/main.tex
+++ b/main.tex
@@ -222,8 +222,8 @@
 %\partnerlogo{our_partner_logo}
 
 %% Command \footer{text}: sets the footer field
-%\footer{\insertshortsectiontitle} % the default
-%\footer{\insertshorttitle}        % a good alternative
+%\footer{\insertsectionhead} % the default
+%\footer{\insertshorttitle}  % a good alternative
 
 %% Command \footerdate{text}: sets the footer date field
 %\footerdate{\insertshortdate} % the default
