--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -250,6 +250,8 @@
 \DeclareOptionBeamer{nocompactmono}{\PassOptionsToPackage{nocompactmono}{beamerfontthemejku}}
 \DeclareOptionBeamer{mathastext}[true]{\PassOptionsToPackage{mathastext=#1}{beamerfontthemejku}}
 \DeclareOptionBeamer{nomathastext}{\PassOptionsToPackage{nomathastext}{beamerfontthemejku}}
+\DeclareOptionBeamer{eulermath}[true]{\PassOptionsToPackage{eulermath=#1}{beamerfontthemejku}}
+\DeclareOptionBeamer{noeulermath}{\PassOptionsToPackage{noeulermath}{beamerfontthemejku}}
 
 \ProcessOptionsBeamer
 
