--- a/main.tex
+++ b/main.tex
@@ -132,10 +132,9 @@
 %%  * mac            ... Use adapted color palette for screen display on Mac.
 %%  * legacyitemizestyle ... Use old bullet style in itemization.
 %% 
-%% Experimental options:
-%%  * mathastext ... Use standard document fonts (and default to sans-serif font) in math mode
-%% 
 %% Advanced options:
+%%  * mathastext        ... Use standard document fonts in math mode
+%%  * eulermath         ... Use Euler fonts (instead of Fira sans-serif font) in math mode with XeTeX
 %%  * nooptpackages     ... Do not load additional convenience packages (which are only there
 %%                          to provide interoperability to the behavior of previous versions of
 %%                          this theme but are not actually required for the current version).
