use filename to load firamath-otf font (otherwise loading fails e.g. on Debian 12)

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -113,7 +113,7 @@
             \RequirePackage{euler-math}%
         }%
     }{%
-        \RequirePackage{firamath-otf}%
+        \RequirePackage[usefilenames]{firamath-otf}%
         %\RequirePackage[no-math]{fontspec}
     }
     % discover font path
