attempt to fix display of parentheses in mathastext mode

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -294,7 +294,7 @@
 %% 
 
 \ifbool{jkubeamer@mathastext}{%
-    \usepackage[italic,defaultmathsizes,eulergreek]{mathastext}
+    \usepackage[italic,defaultmathsizes,eulergreek,nosmalldelims]{mathastext}
 }{}
 
 %% 
