add hyperxmp package to allow more flexible PDF attributes (e.g. pdfcopyright) by default

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -2,7 +2,7 @@
 %% 
 %% LaTeX Beamer Theme for Johannes Kepler University Linz
 %% 
-%% Copyright (C) 2021-2023  Michael Roland
+%% Copyright (C) 2021-2024  Michael Roland
 %% 
 %% This is a rewrite of the JKU theme originally by
 %% Susanne Hametner, Doris Pargfrieder, and Pieter-Jan Hoedt.
@@ -33,6 +33,10 @@
 \RequirePackage{translations}
 \RequirePackage{datetime2}
 \RequirePackage{amsmath}
+\RequirePackage{hyperxmp}
+\hypersetup{
+    keeppdfinfo,
+}
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
