--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -310,7 +310,7 @@
 %% 
 
 \ifbool{jkubeamer@mathastext}{%
-    \usepackage[italic,defaultmathsizes,eulergreek,nosmalldelims]{mathastext}
+    \usepackage[italic,defaultmathsizes,eulergreek,nosmalldelims,unicodeminus]{mathastext}
 }{}
 
 %% 
