--- a/main.tex
+++ b/main.tex
@@ -128,7 +128,7 @@
 %%  * nofooter       ... Do not display a frame footer.
 %%  * noimprint      ... Do not insert imprint on title pages.
 %%  * nojkulogo      ... Do not insert JKU & K logos on title pages and in frame footers.
-%%  * frametitlecaps ... Set frame titles in capital letters (like in eariler theme versions).
+%%  * frametitlecaps ... Set frame titles in capital letters (like in earlier theme versions).
 %%  * nofancyfonts   ... Do not use custom TTF fonts with XeTeX/LuaTeX / supress pdfLaTeX warning.
 %%  * mac            ... Use adapted color palette for screen display on Mac.
 %%  * legacyitemizestyle ... Use old bullet style in itemization.
