fix frametitlecaps option

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -55,7 +55,7 @@
 % Option [no]frametitlecaps: set frame titles in all-caps (defaults to false)
 \newbool{jkubeamer@frametitlecaps}
 \DeclareOptionBeamer{frametitlecaps}[true]{\setbool{jkubeamer@frametitlecaps}{#1}}
-\DeclareOptionBeamer{frametitlecaps}{\boolfalse{jkubeamer@frametitlecaps}}
+\DeclareOptionBeamer{noframetitlecaps}{\boolfalse{jkubeamer@frametitlecaps}}
 \DeclareOptionBeamer{capsframetitle}[true]{%
     \PackageWarning{beamerthemejku}{Option `capsframetitle' deprecated, use frametitlecaps instead!}%
     \setbool{jkubeamer@frametitlecaps}{#1}%
