fix usage of correct block body font definition for alertblock and exampleblock

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -2271,7 +2271,7 @@
     \end{beamercolorbox}%
     \nointerlineskip
     \begin{beamercolorbox}[sep=1ex,vmode]{block body example}%
-        \usebeamerfont{block body}%
+        \usebeamerfont{block body example}%
         \setlength{\leftmargini}{\dimexpr\leftmargini + 1ex + 0.125em\relax}%
         \begin{minipage}{\dimexpr\textwidth-2ex\relax}%
 }
@@ -2298,7 +2298,7 @@
     \end{beamercolorbox}%
     \nointerlineskip
     \begin{beamercolorbox}[sep=1ex,vmode]{block body alerted}%
-        \usebeamerfont{block body}%
+        \usebeamerfont{block body alerted}%
         \setlength{\leftmargini}{\dimexpr\leftmargini + 1ex + 0.125em\relax}%
         \begin{minipage}{\dimexpr\textwidth-2ex\relax}%
 }
