Give jkulogo slides a dedicated pagelabel

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -1509,6 +1509,7 @@
 
 \setbeamertemplate{logo page}{%
     \thispagestyle{empty}%
+    \thispdfpagelabel{\insertframenumber+JKU}%
     \begin{tikzpicture}[remember picture, overlay]
     %\fill[fill=bg] (current page.south west) rectangle (current page.north east);
     \node[anchor=center,line width=0mm, inner sep=0mm] at (current page.center) {
